--- a/src/components/Store/StoreFilters/StoreFilters.css
+++ b/src/components/Store/StoreFilters/StoreFilters.css
@@ -1,7 +1,26 @@
 .filters {
-    width: 60%;
+    width: 80%;
     display: inline-block;
     position: absolute;
-    margin-top: 0.5%;
-    margin-left: 5%;
+    margin-top: 80px;
+    margin-left: 45px;
 }
+
+.filters i {
+    font-size: 26px !important;
+    margin-right: 1%;
+    color: #1fa082;
+}
+
+
+@media only screen and (max-width: 499px) {
+    .filters {
+        margin-left: 69px;
+        position: fixed;
+        padding-left: 2%;
+        background-color: white;
+        padding-top: 5%;
+        margin-top: 55px;
+        box-shadow: 0 8px 8px -3px rgba(0,0,0,.2);
+    }
+  }
