--- a/src/components/CategoryList/CategoryItem/CategoryItem.css
+++ b/src/components/CategoryList/CategoryItem/CategoryItem.css
@@ -1,17 +1,21 @@
 .card {
-    width: 100%;
+    width: 99%;
     padding-left: 1%;
     margin: 0.5%;
-    border: 2px solid white;
     border-radius: 6px;
-    background-color: #FCC253;    
-    color: white  
+    background-color: #1fa082;
+    color: #FCC253;
+    cursor: pointer;
+}
+
+.card:hover {
+    color: white;
 }
 
 .logo {
     vertical-align: middle;
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     background-color: white;
     padding-bottom: 2%;
@@ -19,7 +23,7 @@
 
 .heading {
     display: inline-block;
-    font-size: 24px;
+    font-size: 16px;
     margin-left: 3%;
 }
 
@@ -27,3 +31,15 @@
     border: 2px solid #20a083;
     background-color: #f7d086
 }
+
+@media only screen and (max-width: 499px) {
+    /* For mobile phones: */
+    .heading {
+       display: none;
+    }
+    .logo {
+        width: 50px;
+        height: 50px;
+        margin-bottom: 20%;
+    }
+  }
