--- a/src/components/CategoryList/CategoryList.css
+++ b/src/components/CategoryList/CategoryList.css
@@ -1,5 +1,18 @@
 .shell {
     display: inline-block;
-    width: 30%;
-    
+    width: 15%;
+    margin-top: 55px;
+    height: 93vh;
+    border: 2px solid #1fa082;
+    box-shadow: 8px 8px 8px -1px rgba(0,0,0,.2);
+    background-color: #1fa082;
 }
+
+
+
+@media only screen and (max-width: 499px) {
+    .shell {
+        position: fixed;
+    }
+
+  }
