--- a/src/components/Store/StoreList/StoreList.css
+++ b/src/components/Store/StoreList/StoreList.css
@@ -1,7 +1,16 @@
 .shell {
     display: inline-block;
-    width: 65%;
-    margin-left: 5%;
+    width: 80%;
+    margin-left: 50px;
     position: absolute;
-    margin-top: 5%;
+    margin-top: 150px;
 }
+
+@media only screen and (max-width: 499px) {
+    .shell {
+
+        margin-top: 190px;
+        padding-left: 8%;
+        z-index: -1;
+    }
+  }
