--- a/src/components/UI/Header/Header.css
+++ b/src/components/UI/Header/Header.css
@@ -14,16 +14,18 @@
     box-shadow: 0 8px 8px -1px rgba(0,0,0,.2);
 }
 
-.Toolbar nav {
-    height: 100%;
-    height: 100%;
+
+.Toolbar h3 {
+    margin-left: 45%;
     text-transform: uppercase;
     color: white;
     font-size: 22px;
-    margin-left: 48%;
-    margin-top: 1.2%;
+    margin-top: 1%;
 }
 
 @media (max-width: 499px) {
-  
+  .Toolbar h3{
+    margin-left: 30%;
+    margin-top: 20px;
+  }
 }
