--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+
+
+
 .App {
   font-family: 'Ubuntu', sans-serif;
   position: relative;
-  max-width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 @media only screen and (max-width: 499px) {
