--- a/src/components/Store/Store.css
+++ b/src/components/Store/Store.css
@@ -1,7 +1,15 @@
 .storeBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     margin-top: 80px;
-    width: 80%;
-    margin-left: 20%;
-    display: inline-block;
-    
+    padding-left: 15%;
+}
+
+@media only screen and (max-width: 499px) {
+ .storeBox {
+    padding-left: 20%;
+ }
+
 }
