--- a/src/components/Store/StoreList/StoreList.css
+++ b/src/components/Store/StoreList/StoreList.css
@@ -1,4 +1,9 @@
-
+.shell {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
 
 @media only screen and (max-width: 499px) {
     .shell {
