--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x:hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html, body, #root {
+  height: 100%;
 }
 
 code {
